# Zeeman-Lab

./: README.md
ZeemanProject/: pyproject.toml
ZeemanProject/Data/: 0_ZeroB.ipynb  180Run3.ipynb  90Run3.ipynb  ErrorPropCode.ipynb  LoopFilesInDir.ipynb  MarkdownError.md  README.md  Run3Eerr180.txt  Run3Eerr90.txt  Run3Thetas180.txt  Run3Thetas90.txt  XYR3_180_Dic.txt  XYR3_90_Dic.txt  XY_ZeroB_Dic.txt  fits.ipynb  full_example.ipynb  helperfile.py
ZeemanProject/Data/AllDataFiles/: 0B_control.FIT  0B_control.txt  B0D180.FIT  B0D180.txt  PixelError.ipynb
ZeemanProject/Data/AllDataFiles/Run1/: 10_0404_180.FIT  10_0404_180.txt  10_0440_90.FIT  10_0440_90.txt  11_0414_180.FIT  11_0414_180.txt  11_0414_90.FIT  11_0414_90.txt  12_0424_180.FIT  12_0424_180.txt  12_0424_90.FIT  12_0424_90.txt  1_0075_180.FIT  1_0075_180.txt  1_0075_90.FIT  1_0075_90.txt  2_0192_180.txt  2_0192_90.FIT  2_0192_90.txt  3_0330_180.FIT  3_0330_180.txt  3_0330_90.FIT  3_0330_90.txt  4_0342_180.FIT  4_0342_180.txt  4_0343_90.FIT  4_0343_90.txt  5_0.353_90.FIT  5_0.353_90.txt  5_0353_180.FIT  5_0353_180.txt  6_0362_180.FIT  6_0362_180.txt  6_0362_90.FIT  6_0362_90.txt  7_0374_90.FIT  7_0374_90.txt  7_0375_180.FIT  7_0375_180.txt  8_0384_180.FIT  (+7 more)
ZeemanProject/Data/CSVFiles/: EB180.csv  EB90.csv  mu180.csv  mu90.csv
ZeemanProject/Data/Inconclusive/: 180Run2.ipynb  180Run_1.ipynb  90Run1.ipynb  Run1Eerr180.txt  Run1Eerr90.txt  Run1Thetas180.txt  Run1Thetas90.txt  Run2Eerr180.txt  Run2Thetas180.txt  XYR1_180_Dic.txt  XYR1_90_Dic.txt  XYR2_180_Dic.txt  XYR2_90_Dic.txt
(+82 files in other folders)
