[tool.poetry]
name = "ZeemanProject"
version = "0.1.0"
description = ""
authors = ["Drixitel <mpmunoz1993@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
astropy = "^5.1"
scipy = "^1.8.1"
jupyterlab = "^3.4.3"
notebook = "^6.4.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
